Changelog for Alias (v1.2.0-SNAPSHOT)

2012-08-07 00:11:00 +0100    preparing for snapshot release (James Richardson)
2012-08-06 02:34:24 +0100    reimplement delete command (James Richardson)
2012-08-06 02:18:08 +0100    reimplemented checkcommand (James Richardson)
2012-08-06 01:23:43 +0100    convert to using async event (James Richardson)
2012-08-06 01:23:14 +0100    code clean up (James Richardson)
2012-08-06 01:21:40 +0100    implement api (James Richardson)
2012-08-06 00:35:55 +0100    will reimplement once database testing is complete (James Richardson)
2012-08-06 00:30:24 +0100    update to AbstractPlugin and new frameworks (James Richardson)

v1.1.1
2012-08-02 09:52:42 +0100    prepare config for release (James Richardson)

v1.1.0
2012-08-02 09:37:23 +0100    now using parent pom (James Richardson)
2012-08-02 09:26:24 +0100    fix MissingKeyException (James Richardson)
2012-08-02 09:23:55 +0100    really fixed it this time (James Richardson)
2012-08-02 09:13:32 +0100    Fix NPE in PreLoginEvent (James Richardson)
2012-07-29 18:07:25 +0100    preparing for snapshot testing (James Richardson)
2012-07-29 13:33:41 +0100    remove unused import (James Richardson)
2012-07-29 02:12:36 +0100    preparing for release (James Richardson)
2012-07-29 00:23:15 +0100    Allow usage from console (James Richardson)
2012-07-29 00:20:35 +0100    added Metrics - changed from LoginEvent to PreLoginEvent (James Richardson)
2012-07-28 23:17:18 +0100    add MetricsListener (James Richardson)
2012-07-07 05:20:58 +0100    fix NPE when initalising handler before plugin is ready (James Richardson)
2012-07-07 04:38:58 +0100    remove duplicates from header (James Richardson)
2012-07-07 04:33:58 +0100    preserve order (James Richardson)
2012-07-07 04:33:27 +0100    remove duplicates from player name list (James Richardson)
2012-07-07 04:26:24 +0100    remove debugging (James Richardson)
2012-07-07 04:24:31 +0100    fix NPE (James Richardson)